--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="/static/fastclick.js"></script>
+    <script type="text/javascript">
+    if ('addEventListener' in document) {
+      window.addEventListener('load', function() {
+        FastClick.attach(document.body);
+      }, false);
+    }
+    </script>
   </body>
 </html>
